Make the command more configurable. Make syslog optional. Log the full url, not just domain as requested from feedback.

--- a/nssecurity.ini
+++ b/nssecurity.ini
@@ -19,6 +19,20 @@
 ;                           looks at about:plugins (Linux Only, Apple use the
 ;                           Contents of Info.plist)
 ;
+;   NotifyCommand           Execute this command when a plugin does not match
+;                           any AllowedDomains. This is intended to display a
+;                           notification to the user, or give them instructions
+;                           to contact support.
+;
+;   SyslogPolicyDecisions   Log policy decisions to syslog. This is intended to
+;                           help debug new policies, by allowing administrators
+;                           to collect statistics on the most commonly used
+;                           domains.
+;
+;                           It can be used to gradually roll out new policies
+;                           by setting AllowedDomains=*, and then collecting
+;                           the most common users before restricting it.
+;
 
 [Global]
 FriendlyWarning=
@@ -27,6 +41,8 @@ PluginDescription=
     This plugin helps your administrators manage the plugins for the types listed below.
 PluginName=
     Netscape Plugin Security Wrapper
+;NotifyCommand=osascript -e 'tell app "System Events" to display dialog "Permission Denied"' &
+;SyslogPolicyDecisions=1
 
 [Totem Media Player]
 ; Set an empty warning to disable the feature.
