--- a/trunk/nssecurity.ini
+++ b/trunk/nssecurity.ini
@@ -24,6 +24,10 @@
 ;                           notification to the user, or give them instructions
 ;                           to contact support.
 ;
+;                           This string is passed directly to system(), and
+;                           will block. Use & to background the task if
+;                           necessary.
+;
 ;   SyslogPolicyDecisions   Log policy decisions to syslog. This is intended to
 ;                           help debug new policies, by allowing administrators
 ;                           to collect statistics on the most commonly used
@@ -41,7 +45,10 @@ PluginDescription=
     This plugin helps your administrators manage the plugins for the types listed below.
 PluginName=
     Netscape Plugin Security Wrapper
+; Mac example
 ;NotifyCommand=osascript -e 'tell app "System Events" to display dialog "Permission Denied"' &
+; Linux example
+;NotifyCommand=xmessage "Plugin not allowed" &
 ;SyslogPolicyDecisions=1
 
 [Totem Media Player]
