clean up examples.

--- a/nssecurity.ini
+++ b/nssecurity.ini
@@ -35,7 +35,8 @@
 ;
 ;                           It can be used to gradually roll out new policies
 ;                           by setting AllowedDomains=*, and then collecting
-;                           the most common users before restricting it.
+;                           the most common users before restricting it (only
+;                           recommended for debugging policies).
 ;
 
 [Global]
@@ -45,22 +46,19 @@ PluginDescription=
     This plugin helps your administrators manage the plugins for the types listed below.
 PluginName=
     Netscape Plugin Security Wrapper
-; Mac example
-;NotifyCommand=osascript -e 'tell app "System Events" to display dialog "Permission Denied"' &
-; Linux example
-;NotifyCommand=xmessage "Plugin not allowed" &
-;SyslogPolicyDecisions=1
 
 [Totem Media Player]
 ; Set an empty warning to disable the feature.
 FriedlyWarning=
 LoadPlugin=/usr/lib/mozilla/plugins/libtotem-cone-plugin.so
 AllowedDomains=*.corp.megacorp.com
+NotifyCommand=xmessage Totem Blocked &
 
 [Shockwave Flash]
 LoadPlugin=/usr/lib/mozilla/plugins/flashplugin-alternative.so
 FriendlyWarning=This website is not permitted to use the Shockwave Flash plugin.
 AllowedDomains=*.doubleclick.net,*.adobe.com,*.macromedia.com
+SyslogPolicyDecisions=1
 
 [Java Applets]
 LoadPlugin=/System/Library/Java/Support/CoreDeploy.bundle/Contents/JavaAppletPlugin.plugin
